cargando nuevo archivo html

--- a/formulario.html
+++ b/formulario.html
@@ -34,6 +34,7 @@
         </p>
 
         <button type="submit">Enviar Datos</button>
+        <input type="submit" value="Enviar Datos">
     </form>
 </body>
 </html>
