--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,17 @@
         <p style="text-align: center;">Productos Top</p>
     </header>
     <main>
+        <div>
+            <h4>Temas</h4>
+            <ul>
+                <li>
+                    <a href="./formulario.html">Formularios</a>
+                </li>
+                <li>
+                    <a href="./tablas.html">Tablas</a>
+                </li>
+            </ul>
+        </div>
         <table>
             <tr>
                 <td>
