--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
     <title>Inicio</title>
 </head>
+<style>
+    body{
+        font-family: 'Comfortaa', cursive;
+    }
+
+
+</style>
 <body>
     <div style="width: 800px;margin: 10px auto;">
     
