--- a/formulario.html
+++ b/formulario.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
     <title>Formularios</title>
 </head>
 <body>
+    <style>
+        body{
+            font-family: 'Comfortaa', cursive;
+        }
+    </style>
     <form action="">
         <p>
             <input type="text" name="nombre" required placeholder="Ingrese su nombre*">
