cargando hoja de estilo y enlazando al html

--- a/Index.html
+++ b/Index.html
@@ -6,14 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
     <title>Inicio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
-<style>
-    body{
-        font-family: 'Comfortaa', cursive;
-    }
-
-
-</style>
 <body>
     <div style="width: 800px;margin: 10px auto;">
     
@@ -22,7 +16,7 @@
         <p style="text-align: center;">Productos Top</p>
     </header>
     <main>
-        <div>
+        <div id="div_temas">
             <h4>Temas</h4>
             <ul>
                 <li>
