agregando detalles al proyecto

--- a/flex.html
+++ b/flex.html
@@ -18,8 +18,9 @@
         <div class="hijo"></div>
         <div class="hijo"></div>
         <div class="hijo"></div>
-        
-
+        <div class="hijo"></div>
+        <div class="hijo"></div>
+        <div class="hijo"></div>
     </div>
 </body>
 </html>
