agregando secciones y reto

--- a/Index.html
+++ b/Index.html
@@ -27,6 +27,9 @@
                 <li>
                     <a href="./tablas.html">Tablas</a>
                 </li>
+                <li>
+                    <a href="./reto1.html">Reto</a>
+                </li>
             </ul>
         </div>
         <table>
