--- a/reto1.html
+++ b/reto1.html
@@ -30,6 +30,11 @@
                 <img src="./images/icon-cart.svg" alt="">
                 Add to Cart
             </button>
+
+            <button class="boton2" type="submit">
+                <img src="./images/icon-cart.svg" alt="">
+                1-click Purchase
+            </button>
         </div>
     </div>
     
