agregando link al index

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 <li>
                     <a href="./reto1.html">Reto</a>
                 </li>
+                <li>
+                    <a href="./reto2.html">Reto Tarea</a>
+                </li>
             </ul>
         </div>
         <div class="conteiner-productos">
