--- a/retos/reto1.html
+++ b/retos/reto1.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/reto1.css">
+    <link rel="stylesheet" href="../css/reto1.css">
 </head>
 <body>
     <div class="container">
