--- a/retos/reto2.html
+++ b/retos/reto2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/reto2.css">
+    <link rel="stylesheet" href="../css/reto2.css">
 </head>
 <body>
     <main class="principal">
