relacionando al main

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="./tablas.html">Tablas</a>
                 </li>
                 <li>
-                    <a href="./reto1.html">Reto</a>
+                    <a href="./retos/javascript/reto/index.html">Reto</a>
                 </li>
                 <li>
                     <a href="./reto2.html">Reto Tarea</a>
